--- a/Big_Testbed/.classpath
+++ b/Big_Testbed/.classpath
@@ -6,16 +6,16 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="jade.jar"/>
-	<classpathentry kind="lib" path="commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="ch.qos.logback.classic_1.0.0.jar"/>
-	<classpathentry kind="lib" path="ch.qos.logback.core_1.0.0.jar"/>
-	<classpathentry kind="lib" path="org.openscada.external.jcifs_1.2.25.201303051448.jar"/>
-	<classpathentry kind="lib" path="org.openscada.jinterop.core_2.0.8.201303051454.jar"/>
-	<classpathentry kind="lib" path="org.openscada.jinterop.deps_1.0.0.201303051454.jar"/>
-	<classpathentry kind="lib" path="org.openscada.opc.dcom_1.0.0.201303051455.jar"/>
-	<classpathentry kind="lib" path="org.openscada.opc.lib_1.0.0.201303051455.jar"/>
-	<classpathentry kind="lib" path="slf4j.api_1.6.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/jade.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/ch.qos.logback.classic_1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/ch.qos.logback.core_1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/org.openscada.external.jcifs_1.2.25.201303051448.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/org.openscada.jinterop.core_2.0.8.201303051454.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/org.openscada.jinterop.deps_1.0.0.201303051454.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/org.openscada.opc.dcom_1.0.0.201303051455.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/org.openscada.opc.lib_1.0.0.201303051455.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/slf4j.api_1.6.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/jung2-2_0_1/collections-generic-4.01.jar"/>
 	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/jung2-2_0_1/colt-1.2.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/jung2-2_0_1/concurrent-1.3.4.jar"/>
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/jung2-2_0_1/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/jung2-2_0_1/vecmath-1.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/jung2-2_0_1/wstx-asl-3.2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VRMILLING/git/Big_Testbed/lib/com.google.collections.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
